--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/icons": "^4.11.2",
     "@material/textfield": "^13.0.0",
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.4.0",
@@ -22,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.0",
+    "react-input-mask": "^2.0.4",
     "react-jss": "^10.9.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5"
