--- a/src/playbook/playbook.yaml
+++ b/src/playbook/playbook.yaml
@@ -3,8 +3,8 @@
   gather_facts: false
   become: true          #Указывает спользуется ли повышение привилегий при выполнении задачи
   tasks:                #Основной список задач для выполнения, они запускаются после roles и перед post_tasks
-   - include: tasks/nginx.yaml
-   - include: tasks/php.yaml
-   - include: tasks/supervisor.yaml
-   - include: tasks/node.yaml
-#   - include: tasks/newssl.yaml
+#   - include: tasks/nginx.yaml
+#   - include: tasks/php.yaml
+#   - include: tasks/supervisor.yaml
+#   - include: tasks/node.yaml
+   - include: tasks/config.yaml
