--- a/src/playbook/playbook.yaml
+++ b/src/playbook/playbook.yaml
@@ -4,8 +4,9 @@
   become: true          #Указывает спользуется ли повышение привилегий при выполнении задачи
   tasks:                #Основной список задач для выполнения, они запускаются после roles и перед post_tasks
    - include: tasks/nginx.yaml
-   - include: tasks/ssl.yaml
-#   - include: tasks/php.yaml
+#   - include: tasks/ssl.yaml
+   - include: tasks/php.yaml
+   - include: tasks/python.yaml
    - include: tasks/supervisor.yaml
 #   - include: tasks/node.yaml
-   - include: tasks/config.yaml
+#   - include: tasks/config.yaml
