--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/styles": "^5.4.1",
     "@mui/system": "^5.4.1",
     "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-viewport": "^6.4.18",
+    "@storybook/addon-viewport": "^6.5.0-alpha.42",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -67,24 +67,26 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
-    "@storybook/addon-actions": "^6.4.18",
-    "@storybook/addon-essentials": "^6.4.18",
-    "@storybook/addon-links": "^6.4.18",
-    "@storybook/builder-webpack5": "^6.4.18",
-    "@storybook/manager-webpack5": "^6.4.18",
-    "@storybook/node-logger": "^6.4.18",
+    "@storybook/addon-actions": "^6.5.0-alpha.42",
+    "@storybook/addon-essentials": "^6.5.0-alpha.42",
+    "@storybook/addon-links": "^6.5.0-alpha.42",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.42",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.42",
+    "@storybook/node-logger": "^6.5.0-alpha.42",
     "@storybook/preset-create-react-app": "^4.0.1",
-    "@storybook/react": "^6.4.18",
+    "@storybook/react": "^6.5.0-alpha.42",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
+    "@webpack-cli/generators": "^2.4.2",
     "eslint": "^8.9.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-storybook": "^0.5.6",
+    "eslint-plugin-storybook": "^0.5.7",
     "web-vitals": "^2.1.4",
-    "webpack": "^5.68.0"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2"
   }
 }
