--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "task0.1",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nightdreams11.github.io/react_MD_task_1_abz/",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
